--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+[v-cloak] {
+  display: none;
+}
+
 body {
   color: #777;
   font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .card {
@@ -22,6 +32,7 @@ body {
 
 .card-footer {
   font-family: monospace;
+  font-size: 16px;
   color: #2c3e50;
   height: 40px;
   line-height: 40px;
