--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 [v-cloak] {
-  display: none;
+  /* NOTE: Uncomment to suppress the "Flash" effect at loading time. */
+  /*display: none;*/
+}
+
+.card-counter {
+  /* NOTE: Uncomment for a better display of card counters */
+  /*font-size: 80px;*/
 }
 
 body {
@@ -21,6 +27,7 @@ h1 {
   border: 1px solid #ddd;
   text-align: center;
   box-shadow: 1px 1px 4px #ddd;
+  font-size: 16px;
   width: 180px;
   display: inline-block;
   margin-right: 10px;
@@ -29,14 +36,12 @@ h1 {
 
 .card-content {
   height: 160px;
-  font-size: 80px;
   line-height: 160px;
   color: #34495e;
 }
 
 .card-footer {
   font-family: monospace;
-  font-size: 16px;
   color: #2c3e50;
   height: 40px;
   line-height: 40px;
