--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   /*display: none;*/
 }
 
-.card-counter {
+.card-content {
   /* NOTE: Uncomment for a better display of card counters */
   /*font-size: 80px;*/
 }
